src/pre/kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: sandbox
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
