src/pre/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: sandbox
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
